--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,7 @@
   ],
   "hints": {
     "axe/forms": "off",
-    "compat-api/css": "off"
+    "compat-api/css": "off",
+    "axe/name-role-value": "off"
   }
 }
