--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,7 @@
   "hints": {
     "axe/forms": "off",
     "compat-api/css": "off",
-    "axe/name-role-value": "off"
+    "axe/name-role-value": "off",
+    "disown-opener": "off"
   }
 }
